Fixed text align center

--- a/client/src/components/Wrapper/Wrapper.css
+++ b/client/src/components/Wrapper/Wrapper.css
@@ -5,4 +5,5 @@
   align-content: flex-start;
   width: 1058px;
   margin: 0 auto;
+  text-align: center;
 }
